--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -25,6 +25,24 @@
 	.icon.blank { width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
 }
 
+.smile.c26 { width: 26px; height: 26px; line-height: 26px; }
+.smile.c26 {
+	.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
+	.icon.blank { width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
+}
+
+.smile.c28 { width: 28px; height: 28px; line-height: 28px; }
+.smile.c28 {
+	.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
+	.icon.blank { width: 22px; height: 22px; margin: -11px 0px 0px -11px; }
+}
+
+.smile.c32 { width: 32px; height: 32px; line-height: 32px; }
+.smile.c32 {
+	.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
+	.icon.blank { width: 28px; height: 28px; margin: -14px 0px 0px -14px; }
+}
+
 .smile.c48 { width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
 .smile.c48 {
 	.emoji-mart-emoji { margin: -1px 0px 0px 1px; font-size: 24px; height: 28px; line-height: 1em; }
