--- a/src/scss/block/link.scss
+++ b/src/scss/block/link.scss
@@ -4,8 +4,12 @@
 	.block.blockLink { white-space: nowrap; }
 	.block.blockLink {
 		.name {
-			display: inline-block; vertical-align: top; letter-spacing: 0.1px; max-width: calc(100% - 30px); border-bottom: 1px solid $colorDarkGrey;
-			cursor: pointer; @include text-overflow-nw;   
+			display: inline; vertical-align: top; letter-spacing: 0.1px; max-width: calc(100% - 30px);
+			cursor: pointer; @include text-overflow-nw; position: relative;
+		}
+		.name::after {
+			content: ""; width: 100%; height: 1px; background: $colorDarkGrey; transition: $transitionFast;
+			position: absolute; bottom: 0px; left: 0px; z-index: 1;
 		}
 		.smile { margin-right: 6px; }
 		
