emoji rendering as image

--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -28,7 +28,7 @@ html.debug {
 		.block.blockText {
 			.marker { background-color: rgba(0,0,255,0.1); }
 
-			mention {
+			mention, emoji {
 				smile { background-color: rgba(0,0,255,0.1); }
 				name { background-color: rgba(0,0,255,0.1); }
 			}
