--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -17,7 +17,7 @@
 			background: rgba(172,169,150,0.15);
 		}
 
-		emoji { white-space: nowrap; display: inline-block; }
+		emoji { display: inline-block; user-select: text; }
 		emoji * { user-select: text; }
 
 		mention { cursor: pointer; white-space: nowrap; display: inline-block; }
