--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -11,7 +11,7 @@
 	.icon.image { width: 100%; height: auto; position: absolute; left: 0px; top: 50%; transform: translateY(-50%); }
 
 	/*.smileImage { object-fit: none; width: 64px; height: 64px; transform-origin: 0px 0px; position: absolute; left: 50%; top: 50%; }*/
-	.smileImage { position: absolute; left: 50%; top: 50%; transform: translateY(-50%); }
+	.smileImage { width: 100%; height: 100%; }
 }
 
 .smile.withImage { border-radius: 100%; }
