--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -60,10 +60,7 @@
 
 .icon.user {
 	.txt { line-height: inherit; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 1; }
-	.image { 
-		position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background-size: cover; background-position: center center;
-		border-radius: 100%; 
-	}
+	.image { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; object-fit: cover; }
 }
 .icon.user.grey { background-color: $colorLightGrey; }
 .icon.user.black { background-color: $colorBlack; }
