--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -37,7 +37,7 @@ html.debug {
 	
 	.blockLast { background: rgba(0,0,255,0.1); }
 	
-	/*.focusable.isFocused { border: 1px solid rgba(255,127,127,0.3); }*/
+	.focusable.isFocused { border: 1px solid rgba(255,127,127,0.3); }
 	
 	.header {
 		.icon { background-color: rgba(0,0,255,0.1); }
