--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -1,6 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
+	.block.blockFile { padding: 6px 0px; }
 	.block.blockFile {
 		.loaderWrapper { border-radius: 4px; border: solid 1px #d2d0c2; height: 48px; width: 100%; }
 		.error { margin: 0px; font-size: 12px; line-height: 24px; height: 24px; }
@@ -34,6 +35,7 @@
 		.download { opacity: 1; }
 	}
 	
-	.block.blockFile > .wrapContent > .selectable > .dropTarget { padding: 6px 0px; @include text-overflow-nw;  }
+	.block.blockFile > .wrapContent > .selectable > .dropTarget { @include text-overflow-nw;  }
 	.block.blockFile > .wrapContent > .selectable.isSelected .download { display: none; }
+	.block.blockFile > .wrapContent > .selectable > .dropTarget > .focusable.withFile { margin: 3px 0px; }
 }
