--- a/src/scss/block/media.scss
+++ b/src/scss/block/media.scss
@@ -1,6 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
+	.block.blockMedia { padding: 6px 0px; }
 	.block.blockMedia.isResizing * { cursor: nwse-resize; }
 	
 	.block.blockMedia {
@@ -28,7 +29,7 @@
 		}
 		.icon.play:hover { background-color: rgba(255,255,255,0.9); }
 	}
-	.block.blockMedia > .wrapContent > .selectable > .dropTarget { line-height: 0px; padding: 6px 0px; }
+	.block.blockMedia > .wrapContent > .selectable > .dropTarget { line-height: 0px; }
 	
 	.block.blockMedia:hover {
 		.icon.resize { opacity: 1; }
