--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -119,7 +119,7 @@
 			}
 		}
 		.icon.active {
-			 .arrow { background-image: url('~img/icon/menu/action/arrow1.svg'); transform: rotateZ(-180deg); }
+			 .arrow { background-image: url('~img/icon/menu/action/arrow1.svg'); }
 		}
 	}
 }
