--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -7,6 +7,10 @@ html.debug {
 	
 	.blocks {
 		.block { border: 1px solid rgba(255,0,0,0.3); }
+		.block {
+			.wrapMenu { background-color: rgba(0,255,0,0.1); }
+		}
+
 		.block.blockLayout.c0 { border-color: rgba(0,255,0,0.3); }
 		.block.blockLayout.c0  > .wrapContent > .dropTarget { background: rgba(0,0,255,0.1); }
 		.block.blockLayout.c1 { border-color: rgba(0,0,255,0.3); }
