--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -77,25 +77,24 @@
 	
 	.block.blockText.header1 { padding: 22px 0px 0px 0px; }
 	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget { 
-		font-family: 'Lcg'; font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; 
+		font-family: 'Lcg'; font-size: 28px; line-height: 32px; letter-spacing: -0.48px; font-weight: 600; 
 		padding: 4px 0px 2px 0px;
 	}
 	
 	.block.blockText.header2 { padding: 14px 0px 0px 0px; }
 	.block.blockText.header2 > .wrapContent > .selectable > .dropTarget { 
-		font-family: 'Lcg'; font-size: 22px; line-height: 28px; letter-spacing: -0.16px; font-weight: 600; 
+		font-family: 'Lcg'; font-size: 22px; line-height: 28px; letter-spacing: -0.48px; font-weight: 600; 
 		padding: 3px 0px 2px 0px;
 	}
 	
 	.block.blockText.header3 { padding: 14px 0px 0px 0px; }
 	.block.blockText.header3 > .wrapContent > .selectable > .dropTarget { 
-		font-size: 18px; line-height: 26px; letter-spacing: 0.04px; font-weight: 600; 
-		padding: 2px 0px 3px 0px;
+		font-size: 18px; line-height: 26px; letter-spacing: -0.16px; font-weight: 600; padding: 2px 0px 3px 0px;
 	}
 	
 	.block.blockText.quote { padding: 6px 0px 6px 0px; }
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget { 
-		font-size: 18px; line-height: 26px; letter-spacing: 0.04px; font-style: italic;
+		font-size: 18px; line-height: 26px; letter-spacing: -0.16px; font-style: italic;
 		padding: 2px 0px 3px 0px;
 	}
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .line { 
