--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -5,30 +5,12 @@
 	top: 0px; width: 100%; height: 100%;
 }
 
-.cover.type1.c1 { background-color: #FEE874; }
-.cover.type1.c2 { background-color: #FFB522; }
-.cover.type1.c3 { background-color: #EFAEA1; }
-.cover.type1.c4 { background-color: #F55522; }
-.cover.type1.c5 { background-color: #6A1036; }
-.cover.type1.c6 { background-color: #132877; }
-.cover.type1.c7 { background-color: #2869E9; }
-.cover.type1.c8 { background-color: #88CDF3; }
-.cover.type1.c9 { background-color: #9BB0B7; }
-.cover.type1.c10 { background-color: #136E41; }
-
-.cover.type1.c11 { background-image: url('~img/cover/1.jpg'); }
-.cover.type1.c12 { background-image: url('~img/cover/2.jpg'); }
-.cover.type1.c13 { background-image: url('~img/cover/3.jpg'); }
-.cover.type1.c14 { background-image: url('~img/cover/4.jpg'); }
-.cover.type1.c15 { background-image: url('~img/cover/5.jpg'); }
-.cover.type1.c16 { background-image: url('~img/cover/6.jpg'); }
-.cover.type1.c17 { background-image: url('~img/cover/7.jpg'); }
-
 .cover.type2.yellow { background: #FEE874; }
 .cover.type2.orange { background: #FFB522; }
 .cover.type2.red { background: #F55522; }
 .cover.type2.pink { background: #EFAEA1; }
 .cover.type2.purple { background: #6A1036; }
+.cover.type2.navy { background-color: #132877; }
 .cover.type2.blue { background: #2869E9;; }
 .cover.type2.ice { background: #88CDF3; }
 .cover.type2.teal { background: #9BB0B7; }
@@ -41,3 +23,11 @@
 .cover.type3.red { background: linear-gradient(180deg, $colorRed 0%, $colorPink 105.47%); }
 .cover.type3.blue { background: linear-gradient(180deg, $colorPurple 0%, $colorBlue 105.47%); }
 .cover.type3.teal { background: linear-gradient(180deg, $colorIce 0%, $colorTeal 105.47%); }
+
+.cover.type5.c1 { background-image: url('~img/cover/1.jpg'); }
+.cover.type5.c2 { background-image: url('~img/cover/2.jpg'); }
+.cover.type5.c3 { background-image: url('~img/cover/3.jpg'); }
+.cover.type5.c4 { background-image: url('~img/cover/4.jpg'); }
+.cover.type5.c5 { background-image: url('~img/cover/5.jpg'); }
+.cover.type5.c6 { background-image: url('~img/cover/6.jpg'); }
+.cover.type5.c7 { background-image: url('~img/cover/7.jpg'); }
