--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -18,7 +18,7 @@
 		}
 		.item {
 			.icon { margin-right: 4px; }
-			.icon.arrow { margin: 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
+			.icon.arrow { margin: -2px 0px 0px 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
 			.smile { margin-right: 4px; }
 			.name { display: inline-block; vertical-align: top; margin-right: 6px; line-height: 20px; }
 		}
