--- a/src/scss/page/help.scss
+++ b/src/scss/page/help.scss
@@ -2,4 +2,7 @@
 
 .pageHelp {
 	.wrapper { width: 704px; margin: 0px auto; padding: 100px 0px; }
+	.note { text-align: right; color: #aca996; display: block; }
+
+	.wrapContent { width: 100% !important; }
 }
