--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -71,7 +71,7 @@ a { color: $colorBlack; }
 .bgColor-red { background: #ffebe5 !important; }
 .bgColor-pink { background: #fee3f5 !important; }
 .bgColor-purple { background: #f4e3fa !important; }
-.bgColor-blue { background: #f4e3fa !important; }
+.bgColor-blue { background: #e4e7fc !important; }
 .bgColor-ice { background: #d6effd !important; }
 .bgColor-teal { background: #d6f5f3 !important; }
 .bgColor-lime { background: #e3f7d0 !important; }
