--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -37,6 +37,7 @@
 				.icon.wallpaper { background-image: url('~img/icon/popup/settings/wallpaper.svg'); }
 				.icon.phrase { background-image: url('~img/icon/popup/settings/phrase.svg'); }
 				.icon.pin { background-image: url('~img/icon/popup/settings/pin.svg'); }
+				.icon.import { background-image: url('~img/icon/popup/settings/import.svg'); }
 				
 				.label { display: inline-block; vertical-align: top; }
 				.icon.arrow { 
