--- a/src/scss/menu/common.scss
+++ b/src/scss/menu/common.scss
@@ -47,11 +47,11 @@
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		
-		.item:before {
+		.item::before {
 			content: ""; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: $colorDarkGrey; z-index: 1;
 			opacity: 0; transition: $transitionFast;
 		}
-		.item.active:before { opacity: 0.15; }
+		.item.active::before { opacity: 0.15; }
 		
 		.item {
 			.name { display: inline-block; vertical-align: top; }
