emoji system refactoring

--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -120,18 +120,26 @@
 			.label { margin-bottom: 26px; }
 			.item { 
 				width: 132px; height: 84px; margin: 0px 16px 16px 0px; border: 1px solid $colorLightGrey; border-radius: 8px; 
-				text-align: center; transition: $transitionFast; line-height: 82px; opacity: 0.5; cursor: no-drop; 
-				display: inline-block; vertical-align: top;
+				text-align: center; transition: $transitionFast; line-height: 82px;	display: inline-block; cursor: pointer;
+				vertical-align: top; position: relative;
 			}
 			.item:nth-child(4n + 4) { margin-right: 0px; }
+			.item:hover { border-color: $colorBlack; }
+
+			.item.disabled { cursor: no-drop;  }
+			.item.disabled:hover { border-color: $colorLightGrey;  }
 
 			.item {
 				.icon { margin-bottom: 6px; height: 32px; }
 				.name { @include text-small; }
+				.soon { 
+					font-weight: 500; font-size: 9px; line-height: 18px; letter-spacing: 0.4px; text-transform: uppercase; color: $colorDarkGrey; 
+					position: absolute; top: 3px; right: 9px;
+				}
 			}
 
 			.item.notion { opacity: 1; cursor: pointer; }
-			.item.notion:hover { border-color: $colorBlack; }
+			.item:hover { border-color: $colorBlack; }
 
 			.item.notion .icon { width: 28px; background-image: url('~img/icon/popup/settings/import/notion.svg'); }
 			.item.evernote .icon { width: 27px; background-image: url('~img/icon/popup/settings/import/evernote.svg'); }
