--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -7,21 +7,25 @@
 		span { height: 100%; display: inline-block; vertical-align: middle; }
 	}
 	
-	.icon.blank { 
-		background-image: url('~img/blank/smile/20.svg'); position: absolute; left: 50%; top: 50%; 
-		width: 20px; height: 20px; margin: -10px 0px 0px -10px;
-	}
 	.icon.archive { 
 		background-image: url('~img/icon/archive.svg'); position: absolute; left: 50%; top: 50%; 
 		width: 24px; height: 24px; margin: -12px 0px 0px -12px;
 	}
-	.icon.image { position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; object-fit: cover; }
 
+	.iconImage { width: 100%; height: 100%; border-radius: 100%; object-fit: cover; }
+	.iconBlank { width: 100%; height: 100%; }
 	.smileImage { width: 100%; height: 100%; }
-	.smileImage.c18 { @include pos-abs-mid; width: 18px; height: 18px; margin: -9px 0px 0px -9px; }
-	.smileImage.c20 { @include pos-abs-mid; width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
+
+	.smileImage.c18, .iconImage.c18 { @include pos-abs-mid; width: 18px; height: 18px; margin: -9px 0px 0px -9px; }
+	.smileImage.c20, .iconImage.c20 { @include pos-abs-mid; width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
 	.smileImage.c24 { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 	.smileImage.c32 { @include pos-abs-mid; width: 32px; height: 32px; margin: -16px 0px 0px -16px; }
+
+	.iconBlank.c18 { @include pos-abs-mid; width: 20px; height: 20px; margin: -10px 0px 0px -10px; }
+	.iconBlank.c20, .iconBlank.c22 { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
+	.iconBlank.c24, .iconBlank.c28, .iconBlank.c32 { 
+		@include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; 
+	}
 }
 
 .smile.withImage { border-radius: 100%; }
@@ -50,21 +54,18 @@
 .smile.c32 { width: 32px; height: 32px; line-height: 32px; }
 .smile.c32 {
 	.emoji-mart-emoji { margin: -2px 0px 0px 2px; }
-	.icon.blank { width: 24px; height: 24px; background-image: url('~img/blank/smile/24.svg'); margin: -12px 0px 0px -12px; }
 }
 
 .smile.c48 { width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
 .smile.c48 {
 	.emoji-mart-emoji { margin: -3px 0px 0px 1px; font-size: 24px; height: 28px; line-height: 1em; }
 	.emoji-mart-emoji { span { height: 28px; line-height: 32px; } }
-	.icon.blank { width: 24px; height: 24px; background-image: url('~img/blank/smile/24.svg'); margin: -12px 0px 0px -12px; }
 }
 
 .smile.c64 { width: 64px; height: 64px; border-radius: 100%; background-color: #f7f5f0; line-height: 64px; }
 .smile.c64 {
 	.emoji-mart-emoji { margin: -1px 0px 0px 0px; font-size: 36px; height: 1em; line-height: 1em; }
 	.emoji-mart-emoji { span { height: 36px; line-height: 36px; } }
-	.icon.blank { width: 24px; height: 24px; background-image: url('~img/blank/smile/24.svg'); margin: -12px 0px 0px -12px; }
 }
 
 .smile.canEdit { cursor: pointer; transition: background-color 0.05s ease-in-out; }
