--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -11,6 +11,7 @@
 		background-image: url('~img/icon/archive.svg'); position: absolute; left: 50%; top: 50%; 
 		width: 24px; height: 24px; margin: -12px 0px 0px -12px;
 	}
+	.icon.home.big { @include pos-abs-mid; width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 
 	.iconImage { width: 100%; height: 100%; border-radius: 100%; object-fit: cover; }
 	.iconBlank { width: 100%; height: 100%; }
