--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -18,7 +18,10 @@
 				.icon { margin-right: 4px; }
 				.icon.arrow { margin: 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
 				.smile { margin-right: 4px; }
-				.name { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 24px; }
+				.name { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 20px; }
+				.icon.search { width: 20px; height: 20px; vertical-align: top; }
+				.icon.home { width: 20px; height: 20px; vertical-align: top; }
+				
 			}
 			.item:last-child { margin: 0px; }
 			.item:last-child {
@@ -26,9 +29,6 @@
 				.name { margin: 0px; }
 			}
 			.item:hover { color: $colorBlack; }
-			.item:hover {
-				.icon.home { background-image: url('~img/icon/home1.svg'); }
-			}
 		}
 		
 		.empty { height: 100%; line-height: 360px; padding: 16px; text-align: center; }
@@ -87,14 +87,14 @@
 			}
 		}
 		
-		.selected { padding: 16px; border: 2px solid $colorOrange; border-radius: 8px; }
+		.selected { padding: 16px 16px 12px 16px; border: 2px solid $colorOrange; border-radius: 8px; }
 		.selected {
 			.smile { margin-bottom: 8px; }
-			.descr { @include text-small; color: #6c6a5f; @include text-overflow; }
+			.descr { @include text-small; color: #6c6a5f; @include text-overflow; max-height: 54px; }
 			.cover { position: static; height: 156px; margin-top: 12px; background-color: #C4C4C4; }
-			.buttons { margin-top: 16px; }
+			.buttons { margin-top: 16px; display: flex; }
 			.buttons {
-				.button { margin-right: 12px; }
+				.button { margin-right: 12px; width: 50%; }
 				.button:last-child { margin: 0px; }
 			}
 		}
