electron linux icon

--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -8,7 +8,7 @@
 		.head { padding: 16px; border-bottom: 1px solid #ebe9e0; }
 		.head {
 			.icon.search { margin-right: 8px; vertical-align: top; }
-			.input { padding: 0px; height: 24px; vertical-align: top; width: calc(100% - 32px); }
+			.input { padding: 0px; height: 24px; vertical-align: top; width: calc(100% - 32px); font-size: 18px; }
 		}
 
 		.path { padding:  8px 12px 0px 12px; white-space: nowrap; }
