--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -24,10 +24,11 @@
 		}
 
 		mention { cursor: pointer; white-space: nowrap; display: inline; user-select: all; }
-		mention * { user-select: all; }
+		mention * { user-select: text; }
 		mention {
 			smile { display: inline; position: relative; z-index: 1; }
 			smile:empty { display: none; }
+			smile * { user-select: none; }
 			
 			name { display: inline; max-width: 400px; @include text-overflow-nw; vertical-align: top; position: relative; }
 			name::after {
