--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -35,8 +35,12 @@
 		}
 		.item.dragging { transition: none; box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); }
 		.item.last { margin-right: 0px; }
+		
 		.item:hover {
 			.icon.more { opacity: 1; }
+		}
+		.item.active {
+			.icon.more { opacity: 1; transition: none; }
 		}
 		
 		.item.add { background: rgba(255,255,255,0.65); transition: background 0.2s ease-in-out; margin-right: 0px; }
