--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -24,22 +24,19 @@
 		}
 
 		mention { cursor: pointer; white-space: nowrap; display: inline; user-select: all; }
-		mention * { user-select: all; }
+		mention * { user-select: text; }
 		mention {
 			smile { display: inline; position: relative; z-index: 1; }
 			smile:empty { display: none; }
+			img { user-select: none; }
 			
-			name { display: inline; max-width: 400px; @include text-overflow-nw; vertical-align: top; position: relative; }
-			name::after {
-				content: ""; width: 100%; height: 0px; border-bottom: 1px solid $colorDarkGrey; transition: $transitionFast;
-				position: absolute; bottom: 0px; left: 0px; z-index: 1;
+			name { 
+				display: inline; max-width: 400px; @include text-overflow-nw; vertical-align: top; position: relative; 
+				border-bottom: 1px solid $colorDarkGrey;
 			}
-
-			.smile.c20 .emoji-mart-emoji { margin: 0px; }
-			.smile.c24 .emoji-mart-emoji { margin: -3px 0px 0px 0px; }
 		}
 		mention:hover {
-			name::after { border-color: $colorBlack; }
+			name { border-color: $colorBlack; }
 		}
 
 		mention.c24 name bgcolor:first-child { margin-left: -24px; padding-left: 24px; }
